# serializer version: 1
# name: test_all_entities[button.ha_gateway_restart-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.ha_gateway_restart',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Restart',
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Restart',
    'platform': 'meshtastic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '!2e9545b8_restart',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.ha_gateway_restart-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'restart',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HA Gateway Restart',
    }),
    'context': <ANY>,
    'entity_id': 'button.ha_gateway_restart',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.remote_one_request_node_info-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.remote_one_request_node_info',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Request node info',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Request node info',
    'platform': 'meshtastic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'request_node_info',
    'unique_id': '!2e9545b8_!aabbccdd_request_node_info',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.remote_one_request_node_info-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Remote One Request node info',
    }),
    'context': <ANY>,
    'entity_id': 'button.remote_one_request_node_info',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.remote_one_request_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.remote_one_request_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Request position',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Request position',
    'platform': 'meshtastic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'request_position',
    'unique_id': '!2e9545b8_!aabbccdd_request_position',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.remote_one_request_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Remote One Request position',
    }),
    'context': <ANY>,
    'entity_id': 'button.remote_one_request_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[button.remote_one_request_telemetry-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.remote_one_request_telemetry',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Request telemetry',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Request telemetry',
    'platform': 'meshtastic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'request_telemetry',
    'unique_id': '!2e9545b8_!aabbccdd_request_telemetry',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[button.remote_one_request_telemetry-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Remote One Request telemetry',
    }),
    'context': <ANY>,
    'entity_id': 'button.remote_one_request_telemetry',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
